--- a/style.css
+++ b/style.css
@@ -114,26 +114,39 @@ nav > ul > a:hover {
 
 #grid {
   margin: auto;
-  width: 90%;
+  width: 70%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
+  align-items: stretch;
+  justify-items: stretch;
+}
+
+.recipe {
+
+  opacity: 0;
+  font-family: Cambria;
+  border: 4px solid var(--second-color);
+  border-radius: 6px;
+  transition: opacity 1.1s;
+  }
+
+
+.recipe-v {
+  opacity: 1;
+  
+ 
 }
 
 
-.rec {
-font-family: Cambria;
-border: 2px solid var(--second-color);
-border-radius: 3px;
-}
 
-.rec  img {
+.recipe  img {
   width: 100%;
 }
 
-.rec:hover {
+.recipe:hover {
   background-color: var(--main-color);
   transition: background-color 0.2s; 
 }
@@ -143,45 +156,18 @@ border-radius: 3px;
   margin: 60px 0;
 }
 
-.rec:hover div {
+.recipe:hover div {
   cursor: pointer;
 }
 
-.rec:hover img {
+.recipe:hover img {
   filter: brightness(80%);
   transition: filter 0.2s;
   cursor: pointer;
 }
 
-#check1, #check2, #check3, #check4, #check5, #check6 {
-  display: none;
-}
 
-#check1:checked ~ .popup,
-#check2:checked ~ .popup,
-#check3:checked ~ .popup,
-#check4:checked ~ .popup,
-#check5:checked ~ .popup,
-#check6:checked ~ .popup
-{
-  display: block;
-  size: inherit;
-  background-color: white;
-  
-  
-}
-
-#check1:checked ~ *,
-#check2:checked ~ *,
-#check3:checked ~ *,
-#check4:checked ~ *,
-#check5:checked ~ *,
-#check6:checked ~ * 
-{
-  display: none;
-}
-
-.rec  div {
+.recipe  div {
   padding: 15px;
 }
 
@@ -253,4 +239,17 @@ section * {
   footer * {
     font-size: 20px;
   }
+}
+
+.delete {
+  background-color: #5951f0;
+  width: 25px;
+  height: 25px;
+  font-size: 18px;
+  color: white;
+  border: none;
+  
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
