--- a/style.css
+++ b/style.css
@@ -124,23 +124,30 @@ nav > ul > a:hover {
   justify-items: stretch;
 }
 
-.recipe {
 
+
+.recipe-in {
   opacity: 0;
-  font-family: Cambria;
-  border: 4px solid var(--second-color);
-  border-radius: 6px;
-  transition: opacity 1.1s;
-  }
-
-
-.recipe-v {
-  opacity: 1;
   
- 
 }
 
+.recipe-visible {
+  opacity: 1;
+  
+}
 
+.recipe-out {
+  
+  opacity: 0;
+  
+}
+
+.recipe {
+  border: 4px solid var(--second-color);
+  border-radius: 6px;
+  position: relative;
+  transition: opacity 0.2s ease-in-out;
+}
 
 .recipe  img {
   width: 100%;
@@ -148,8 +155,10 @@ nav > ul > a:hover {
 
 .recipe:hover {
   background-color: var(--main-color);
-  transition: background-color 0.2s; 
+  transition: background-color 0.2s;
+  transition: opacity 0.2s ease-in-out; 
 }
+
 
 .banner {
   text-align: center;
@@ -242,14 +251,80 @@ section * {
 }
 
 .delete {
-  background-color: #5951f0;
-  width: 25px;
-  height: 25px;
-  font-size: 18px;
-  color: white;
-  border: none;
+  display: none;
   
-  text-align: center;
-  margin: 0;
+}
+
+
+
+.recipe:hover .delete {
+  display: flex;
+  position: absolute;
+  left: -1em;
+  top: -1em;
+  z-index: 10;
+  justify-content: center;
+  align-items: center;
+  background-color: #5951f0;
+  font-size: 18px;
+  font-weight: 900;
+  color: white;
+  border-radius: 1em;
+  width: 2em;
+  height: 2em;
   padding: 0;
+  text-align: center;
+}
+
+
+.recipe:hover .delete > p {
+  padding: 0px;
+  margin: 0px;
+  
+}
+
+.form {
+  margin: 0px;
+  background-color: white;
+  padding: 20px;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  position: fixed;
+  transition: right 0.4s;
+}
+
+.form-h {
+  right: -100%;
+  top: 50%;
+}
+
+.form-v {
+  right: 0px;
+  top: 50%;
+}
+
+.new {
+  margin: 0;
+  position: fixed;
+  right: 0;
+  top: 50%;
+}
+
+.form > form {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form > form > label {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form button {
+  justify-self: self-end;
+  width: 50%;
 }
