--- a/style.css
+++ b/style.css
@@ -143,8 +143,7 @@ nav > ul > a:hover {
 }
 
 .recipe {
-  display: flex;
-  flex-direction: column;
+  
   border: 4px solid var(--second-color);
   border-radius: 6px;
   position: relative;
@@ -152,13 +151,21 @@ nav > ul > a:hover {
 }
 
 .recipe img {
-  width: 100%;
-  object-fit: fill;
+  width: inherit;
+  object-fit: cover;
+  padding: 0px;
+  margin: 0px;
 }
 
 .img-cover {
-  height: 40%;
-  border: 1px solid red;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+}
+
+.rec-text {
+  padding: 15px;
+  height: 100%;
 }
 
 .recipe:hover {
@@ -185,7 +192,7 @@ nav > ul > a:hover {
 
 
 .recipe  div {
-  padding: 15px;
+  
 }
 
 .popup {
