--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ section * {
 }
 
 .form-v {
-  right: 0px;
+  right: 50px;
   top: 50%;
 }
 
@@ -376,12 +376,41 @@ section * {
   margin: auto;
   z-index: 20;
   width: 90%;
-  height: 80%;
+  
   left: 5%;
   top: 5%;
   padding: 20px;
   border: 4px solid var(--second-color);
   border-radius: 6px;
+}
+
+.imgdesc {
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+  padding: 0px 40px;
+}
+
+.descript {
+  
+  
+}
+
+.steps {
+  width: 800px;
+  padding: 40px;
+}
+
+.info > * {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.imgshow img {
+  
+  height: 250px;
+  width: 500px;
+  object-fit: cover;
 }
 
 .Action:hover {
