--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
 header > span {
   display: inline-block;
   padding: 10px;
-  font-family: 'Comic Sans MS';
+  font-family: 'Lato';
   color: white;
   font-size: 30px;
 }
